crates/wesl-test/tests/snapshots/testsuite__wgpu__in__bits_downlevel.snap
---
source: crates/wesl-test/tests/testsuite.rs
expression: res.syntax.to_string()
---
@fragment
fn main() {
    var i: i32 = 0;
    var i2: vec2<i32> = vec2(0i, 0i);
    var i3: vec3<i32> = vec3(0i, 0i, 0i);
    var i4: vec4<i32> = vec4(0i, 0i, 0i, 0i);
    var u: u32 = 0u;
    var u2: vec2<u32> = vec2(0u, 0u);
    var u3: vec3<u32> = vec3(0u, 0u, 0u);
    var u4: vec4<u32> = vec4(0u, 0u, 0u, 0u);
    var f2: vec2<f32> = vec2(0f, 0f);
    var f4: vec4<f32> = vec4(0f, 0f, 0f, 0f);
    u = pack4xI8(i4);
    u = pack4xU8(u4);
    f4 = unpack4x8snorm(u);
    f4 = unpack4x8unorm(u);
    f2 = unpack2x16snorm(u);
    f2 = unpack2x16unorm(u);
}
