crates/wesl-test/tests/snapshots/testsuite__wgpu__in__conversion-float-to-int.snap
---
source: crates/wesl-test/tests/testsuite.rs
expression: res.syntax.to_string()
---
enable f16;

@compute @workgroup_size(1)
fn main() {

}
