crates/wesl-test/tests/snapshots/testsuite__wgpu__in__cross.snap
---
source: crates/wesl-test/tests/testsuite.rs
expression: res.syntax.to_string()
---
@compute @workgroup_size(1)
fn main() {
    let a: vec3<f32> = vec3(0.0, 0.0, 1.0);
}
