crates/wesl-test/tests/snapshots/testsuite__wgpu__in__diagnostic-filter.snap
---
source: crates/wesl-test/tests/testsuite.rs
expression: res.syntax.to_string()
---
diagnostic (off, derivative_uniformity);


