crates/wesl-test/tests/snapshots/testsuite__wgpu__in__multiview_webgl.snap
---
source: crates/wesl-test/tests/testsuite.rs
expression: res.syntax.to_string()
---
@fragment
fn main(@builtin(view_index) view_index: i32) {

}
